Add replicas var file for helm overrides

--- a/roles/deploy_osh/templates/alertmanager.yaml.j2
+++ b/roles/deploy_osh/templates/alertmanager.yaml.j2
@@ -1,6 +1,8 @@
 pod:
   replicas:
-    alertmanager: 3
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%} 
+{% endfor %}
   lifecycle:
     upgrades:
       revision_history: 3
