--- a/roles/deploy_osh/templates/gnocchi.yaml.j2
+++ b/roles/deploy_osh/templates/gnocchi.yaml.j2
@@ -11,7 +11,9 @@ images:
 
 pod:
   replicas:
-    api: 2
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   lifecycle:
     upgrades:
       deployments:
