--- a/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
@@ -17,7 +17,7 @@ global:
      MAX_HEAP_SIZE: "{{contrail.cassandra.Xmx}}"
      HEAP_NEWSIZE: "{{contrail.cassandra.Xmn}}"
      METADATA_PROXY_SECRET: "{{metadata_secret_key}}"
-     LOG_LEVEL: SYS_DEBUG
+     LOG_LEVEL: SYS_INFO
      CLOUD_ORCHESTRATOR: openstack
      AAA_MODE: cloud-admin
      CONFIG_NODEMGR__DEFAULTS__minimum_diskGB: "5"
