--- a/roles/deploy_osh/templates/nagios.yaml.j2
+++ b/roles/deploy_osh/templates/nagios.yaml.j2
@@ -10,7 +10,9 @@ pod:
       nagios:
         timeout: 30
   replicas:
-    nagios: 3
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   resources:
     enabled: {{pod_resources}}
     nagios:
