--- a/roles/deploy_osh/templates/neutron.yaml.j2
+++ b/roles/deploy_osh/templates/neutron.yaml.j2
@@ -3,7 +3,9 @@ network:
     - opencontrail
 pod:
   replicas:
-    server: 3
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   lifecycle:
     upgrades:
       deployments:
