--- a/roles/deploy_osh/templates/ceilometer.yaml.j2
+++ b/roles/deploy_osh/templates/ceilometer.yaml.j2
@@ -1,7 +1,8 @@
 pod:
   replicas:
-    central: 2
-    notification: 2
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   lifecycle:
     upgrades:
       deployments:
