--- a/roles/deploy_osh/templates/elasticsearch.yaml.j2
+++ b/roles/deploy_osh/templates/elasticsearch.yaml.j2
@@ -1,8 +1,8 @@
 pod:
   replicas:
-    master: 3
-    data: 3
-    client: 3
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   lifecycle:
     upgrades:
       deployments:
