--- a/roles/deploy_osh/templates/heat.yaml.j2
+++ b/roles/deploy_osh/templates/heat.yaml.j2
@@ -1,9 +1,8 @@
 pod:
   replicas:
-    api: 3
-    cfn: 2
-    cloudwatch: 3
-    engine: 3
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   lifecycle:
     upgrades:
       deployments:
