--- a/roles/deploy_osh/templates/prometheus.yaml.j2
+++ b/roles/deploy_osh/templates/prometheus.yaml.j2
@@ -1,6 +1,8 @@
 pod:
   replicas:
-    prometheus: 2
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
   lifecycle:
     upgrades:
       revision_history: 3
