--- a/roles/deploy_osh/templates/radosgw-openstack.yaml.j2
+++ b/roles/deploy_osh/templates/radosgw-openstack.yaml.j2
@@ -1,6 +1,8 @@
 pod:
   replicas:
-    rgw: 2
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
 endpoints:
   identity:
     namespace: openstack
