--- a/roles/maas/templates/regiond.conf.j2
+++ b/roles/maas/templates/regiond.conf.j2
@@ -12,7 +12,7 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-database_host: postgresql
+database_host: localhost
 database_name: {{ MAAS_DB_NAME }}
 database_pass: {{ MAAS_DB_PASS }}
 database_user: {{ MAAS_DB_USER }}
