--- a/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
+++ b/roles/deploy_osh/templates/helm_vars_contrail_common.yaml.j2
@@ -40,7 +40,7 @@ global:
 
 
 endpoints:
-  cluster_domain_suffix: "{{global_domain_suffix}}"
+  cluster_domain_suffix: "{{int_domain_suffix}}"
   keystone:
     auth:
       username: "{{endpoints.identity.auth.admin.username}}"
