--- a/roles/deploy_osh/templates/kibana.yaml.j2
+++ b/roles/deploy_osh/templates/kibana.yaml.j2
@@ -39,4 +39,4 @@ pod:
 endpoints:
   ldap:
     path:
-      default: "/ou=People,dc={{global_domain_suffix.split('.')|join(',dc=')}}"
+      default: "/ou=People,dc={{int_domain_suffix.split('.')|join(',dc=')}}"
