--- a/roles/deploy_osh/templates/nagios.yaml.j2
+++ b/roles/deploy_osh/templates/nagios.yaml.j2
@@ -43,4 +43,4 @@ endpoints:
     namespace: ceph
   ldap:
     path:
-      default: "/ou=People,dc={{global_domain_suffix.split('.')|join(',dc=')}}"
+      default: "/ou=People,dc={{int_domain_suffix.split('.')|join(',dc=')}}"
