--- a/roles/deploy_osh/templates/elasticsearch.yaml.j2
+++ b/roles/deploy_osh/templates/elasticsearch.yaml.j2
@@ -130,7 +130,7 @@ storage:
 endpoints:
   ldap:
     path:
-      default: "/ou=People,dc={{global_domain_suffix.split('.')|join(',dc=')}}"
+      default: "/ou=People,dc={{int_domain_suffix.split('.')|join(',dc=')}}"
 monitoring:
   prometheus:
     enabled: {{monitoring}}
